2009-01-16
	* reduce is generic function now.