@@ -1,10 +1,10 @@
 To cite package 'ASRR' in publications use:
 
-Huang Ronggui. 2008. ASRR: Applied Sociological Research with R. R package version 0.0-1.http://asrr.r-forge.r-project.org/.
+Huang Ronggui. 2009. ASRR: Applied Sociological Research with R. R package version 0.0-1.http://asrr.r-forge.r-project.org/.
 
 @Manual{ASRR_rgHUANG,
     title = {ASRR: Applied Sociological Research with R},
     author = {Ronggui HUANG},
-    year = {2008},   
+    year = {2009},   
     url = {http://asrr.r-forge.r-project.org/}
 }
